# weave-diffusion

./: .gitignore  README.md  pyproject.toml  test.py
examples/: pixart_alpha_multi_prompt_interpolation.py  sd_circular_latent_space_walker.py  sd_image_conditional_interpolation.py  sd_latent_space_walker.py  sd_multi_latent_interpolation.py  sd_multi_prompt_interpolation.py
scripts/: controlnet_multi_prompt_interpolation.py  pixart_alpha_multi_prompt_interpolation.py  sd_image_conditional_interpolation.py  sd_multi_prompt_interpolation.py  sdxl.py  sdxl_controlnet_conditioned_svd.py  svd.py
weave_diffusion/: __init__.py  output.py  sd_embedding_interpolation.py  sd_multi_prompt_interpolator.py  sd_multi_prompt_interpolator_pipeline.py  sd_prompt_interpolator_pipeline.py  utils.py
weave_diffusion/pixart_alpha/: __init__.py  multi_prompt_interpolator.py
weave_diffusion/stable_diffusion/: __init__.py  circular_latent_space_walk.py  controlnet_prompt_interpolation.py  latent_space_walk.py  multi_latent_interpolation.py  multi_prompt_interpolation.py  prompt_to_image_interpolation.py
